# ismrmrd-python

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README  README.md  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: ismrmrd_python_conda.yml  python-publish.yml
conda/: build.sh  conda_build_config.yaml  environment.yml  meta.yaml  package.sh  run_test.sh
examples/: demo.py  stream_recon.py
ismrmrd/: __init__.py  acquisition.py  api.py  constants.py  datatypes.py  decorators.py  equality.py  file.py  flags.py  hdf5.py  image.py  io.py  meta.py  serialization.py  util.py  waveform.py
ismrmrd/xsd/: __init__.py  ismrmrd.py  pyxb_compat.py
ismrmrd/xsd/ismrmrdschema/: __init__.py  ismrmrd.py
schema/: .xsdata.xml  ismrmrd.xsd
tests/: test_acquisition.py  test_common.py  test_file.py  test_hdf5.py  test_image.py  test_meta.py  test_serialization.py  test_waveform.py  test_xsd.py
tests/end-to-end/: test-compatibility.sh  test-reconstruction.sh  validate_results.py
utilities/: ismrmrd_copy_stream.py
