[build-system]
requires = ["setuptools", "xsdata[cli]"]
build-backend = "setuptools.build_meta"

[project]
name = "ismrmrd"
dynamic = ["version"]
dependencies = ["h5py>=2.3", "numpy>=1.22.0", "xsdata>=22.12"]
requires-python = ">=3.9"

authors = [{name = "ISMRMRD Developers"}]

description = "Python implementation of ISMRMRD"
readme = "README.md"
license-files = ["LICENSE"]
license = "LicenseRef-IsmrmrdSoftwareLicense"
keywords = ["ismrmrd"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]

[project.urls]
Homepage = "https://github.com/ismrmrd/ismrmrd-python"
Documentation = "https://github.com/ismrmrd/ismrmrd-python"
Repository = "https://github.com/ismrmrd/ismrmrd-python"
